// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Output when services are empty renders its components 1`] = `
<React.Fragment>
  <WithStyles(Typography)
    className=""
    headlineMapping={
      Object {
        "h6": "h2",
      }
    }
    variant="h6"
  >
    Preview
  </WithStyles(Typography)>
  <p
    className=""
  />
  <WithStyles(Typography)
    className=""
    headlineMapping={
      Object {
        "h6": "h2",
      }
    }
    variant="h6"
  >
    Source code
  </WithStyles(Typography)>
  <form
    autoComplete="off"
    className=""
    noValidate={true}
  >
    <RadioGroup
      aria-label="Format"
      className=""
      onChange={[Function]}
      value="2"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="URL"
        title="URL"
        value="0"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="Image URL"
        title="Image URL"
        value="1"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="Markdown"
        title="Markdown"
        value="2"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="Org Mode"
        title="Org Mode"
        value="3"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="Textile"
        title="Textile"
        value="4"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="Rdoc"
        title="Rdoc"
        value="5"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="AsciiDoc"
        title="AsciiDoc"
        value="6"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="RST"
        title="RST"
        value="7"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="Pod"
        title="Pod"
        value="8"
      />
    </RadioGroup>
  </form>
  <pre
    className=""
  />
</React.Fragment>
`;

exports[`Output when services are set renders its components 1`] = `
<React.Fragment>
  <WithStyles(Typography)
    className=""
    headlineMapping={
      Object {
        "h6": "h2",
      }
    }
    variant="h6"
  >
    Preview
  </WithStyles(Typography)>
  <p
    className=""
  >
    <a
      className=""
      href="https://github.com/REPOSITORY"
      title="Build Status"
    >
      <img
        alt="Build Status"
        src="https://img.shields.io/github/stars/REPOSITORY.svg?style=STYLE"
      />
    </a>
    <a
      className=""
      href="https://travis-ci.org/REPOSITORY"
      title="Build Status"
    >
      <img
        alt="Build Status"
        src="https://img.shields.io/travis/REPOSITORY/master.svg?style=STYLE"
      />
    </a>
  </p>
  <WithStyles(Typography)
    className=""
    headlineMapping={
      Object {
        "h6": "h2",
      }
    }
    variant="h6"
  >
    Source code
  </WithStyles(Typography)>
  <form
    autoComplete="off"
    className=""
    noValidate={true}
  >
    <RadioGroup
      aria-label="Format"
      className=""
      onChange={[Function]}
      value="2"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="URL"
        title="URL"
        value="0"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="Image URL"
        title="Image URL"
        value="1"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="Markdown"
        title="Markdown"
        value="2"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="Org Mode"
        title="Org Mode"
        value="3"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="Textile"
        title="Textile"
        value="4"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="Rdoc"
        title="Rdoc"
        value="5"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="AsciiDoc"
        title="AsciiDoc"
        value="6"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="RST"
        title="RST"
        value="7"
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        control={<WithStyles(Radio) />}
        label="Pod"
        title="Pod"
        value="8"
      />
    </RadioGroup>
  </form>
  <pre
    className=""
  >
    [![Build Status](https://img.shields.io/github/stars/REPOSITORY.svg?style=STYLE)](https://github.com/REPOSITORY)

    [![Build Status](https://img.shields.io/travis/REPOSITORY/master.svg?style=STYLE)](https://travis-ci.org/REPOSITORY)

  </pre>
</React.Fragment>
`;
